--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,146 @@
-.App {
-  text-align: center;
+.App{
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ height: 100vh;
+ background-color: #23272a;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#login-box{
+  border: 0.5px solid black;
+  width: 400px;
+  height: 150px;
   display: flex;
+  justify-content: flex-start;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: #2c2f33;
+}
+
+#login-box > form{
+  width: 220px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+}
+
+#login-box > form > input{
+  flex-grow: 1;
+  font-size: 15px;
+}
+
+#text-box{
+  width:  700px;
+  height: 500px;
+  border: 0.5px solid black;
+  overflow: auto;
+  overflow-x: hidden;
+  background-color: #2c2f33 ;
+}
+
+#text-box{
+  -ms-overflow-style: none;
+  overflow: -moz-scrollbars-none;
+  }
+
+#text-box::-webkit-scrollbar{
+  display: none;
+}
+
+
+#chat-container{
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+}
+
+#chat-container > form{
+  display: flex;
+  justify-content: flex-start;
+}
+
+#chat-container > form > input{
+  flex-grow: 1;
+  font-size: 15px;
+}
+
+li {
+    list-style-type: none;
+    margin-left: 3px;
+    white-space: pre-line;
+    word-break: normal;
+}
+
+.green-msg{
+  color: lightgreen;
+}
+
+.blue-msg{
+  color: lightblue;
+}
+
+h2, h1{
+  color: #99aab5;
+}
+
+#send-btn{
+  border: none;
+  background-color: #7289DA;
   color: white;
+  height: 30px;
+  max-width: 120px;
+  outline-style: none;
 }
 
-.App-link {
-  color: #61dafb;
+#send-btn:hover{
+  background-color: lightblue;
+  color: black;
+  transition: 0.2s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+a{
+  color: #7289DA;
+  text-decoration: none;
 }
+
+a:hover {
+  text-decoration: underline;
+}
+
+button{
+  border: none;
+  background-color: #ed493e;
+  color: white;
+  height: 30px;
+  max-width: 120px;
+  width: 120px;
+  outline-style: none;
+  font-size: 15px;
+}
+
+button:hover{
+  background-color: red;
+  transition: 0.2s;
+}
+
+#top-container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#login-error{
+  color: #ed493e;
+  margin-top: 6px;
+}
+
+/* #popup-box{
+  border: 0.5px solid black;
+  background-color: #2c2f33;
+  margin: 0 auto;
+  margin-top: 5px;
+  text-align: center;
+  width: 350px;
+  color: #99aab5;
+  border-radius: 5px;
+} */
